# src/modules/user/user.controller.ts
@@ -29,7 +29,9 @@ import {
   SetPersonalSettingsRequest,
   SetPersonalSettingsResponse,
   SetNotificationSettingsRequest,
-  SetNotificationSettingsResponse
+  SetNotificationSettingsResponse,
+  AccountConfirmationResponse,
+  GetUserResponse
 } from './dto/user-dtos.export';
 import { JwtGuard } from '@guards/jwt.guard';
 import { FastifyReply } from 'fastify';
@@ -73,8 +75,10 @@ export class UserController {
 
   @ApiExtraModels(ConfirmHashDto)
   @Get('account-confirmation/:confirmHash')
-  accountConfirmation(@Param('confirmHash') confirmHash: string) {
-    return this.userService.accountConfirmation({ confirmHash });
+  async accountConfirmation(@Param('confirmHash') confirmHash: string) {
+    await this.userService.accountConfirmation({ confirmHash });
+
+    return new AccountConfirmationResponse();
   }
 
   @Get('get-settings')
@@ -83,6 +87,13 @@ export class UserController {
     const userSettings = await this.userService.getSettings(userId);
 
     return new GetSettingsResponse(userSettings);
+  }
+
+  @Get('get-user/:userNumber')
+  async getUserByNumber(@Param('userNumber') userNumber: string) {
+    const user = await this.userService.getUserByUserNumber(userNumber);
+
+    return new GetUserResponse();
   }
 
   @Patch('set-personal-settings')
